changes in CuppytrailPlayerService.java,StadiumController

--- a/config/local.properties
+++ b/config/local.properties
@@ -16,3 +16,6 @@ mail.smtp.port=587
 mail.smtp.user=bakul.n.sontakke@gmail.com
 mail.smtp.password=B$0^t@kke27
 mail.smtp.starttls.enable=true
+
+
+servicelayer.prefetch=literal
