--- a/cuppytrail/.classpath
+++ b/cuppytrail/.classpath
@@ -9,5 +9,10 @@
 	<classpathentry kind="src" output="eclipsebin/classes" path="gensrc"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cuppy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/cuppytrailhmc"/>
+	<classpathentry exported="true" kind="lib" path="/platform/ext/core/bin/coreserver.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://download.hybris.com/api/5.7.0"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="eclipsebin/notused"/>
 </classpath>
